item 상세 페이지 editing

--- a/src/main/webapp/resources/assets/css/main.css
+++ b/src/main/webapp/resources/assets/css/main.css
@@ -1688,6 +1688,10 @@ Property wrapper Style
   color: #888;
 }
 
+.additional-details li span {
+  color: #888;
+}
+
 .property-features {
   width: 100%;
   display: block;
