item add jsp 수정중

--- a/src/main/webapp/resources/assets/css/main.css
+++ b/src/main/webapp/resources/assets/css/main.css
@@ -2344,7 +2344,7 @@ Property wrapper Style
 
 .user-profile-box .detail ul li a {
   color: #727272;
-  border-bottom: 1px solid #f5f5f5;
+  border-bottom: 1px solid #333333;
   padding: 12px 20px;
   display: block;
   font-size: 14px;
