--- a/src/main/webapp/resources/assets/css/main.css
+++ b/src/main/webapp/resources/assets/css/main.css
@@ -972,13 +972,14 @@ intro section style
 }
 
 .search-container .form-group {
-  margin-bottom: 15px !important;
-  width: 100%
+  /* margin-bottom: 30px !important; */
+ width: 90%;
+  
 }
 
 .search-container .form-group input {
-  height: 60px;
-  width: 100%
+  /* height: 48px; */
+  height: 48px;
 }
 
 .search-container .search-category-container select {
