--- a/src/main/webapp/resources/assets/css/main.css
+++ b/src/main/webapp/resources/assets/css/main.css
@@ -493,6 +493,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 .pagination-container {
   display: inline-block;
   margin-top: 10px;
+  text-align:center;
 }
 
 .pagination-container .pagination .page-item .page-link {
@@ -2086,7 +2087,7 @@ Property wrapper Style
   Dashboard Body
 -----------------------------------------------*/
 .dashborad-box {
-  padding: 30px;
+  padding: Spx;
   margin-bottom: 30px;
   -webkit-box-shadow: 0 0 20px rgba(38, 38, 38, 0.2);
   box-shadow: 0 0 20px rgba(38, 38, 38, 0.2);
