--- a/src/main/webapp/resources/assets/css/main.css
+++ b/src/main/webapp/resources/assets/css/main.css
@@ -808,9 +808,9 @@ a.back-to-top:hover, a.back-to-top:focus {
   background: transparent;
 }
 
-.search-add {
+/* .search-add {
   margin: 10px 0px 0px 0px;
-}
+} */
 
 .search-add .form-group {
   position: relative;
@@ -818,7 +818,7 @@ a.back-to-top:hover, a.back-to-top:focus {
 
 .search-add input {
   border: 1px solid #e5e5e5;
-  padding: 7px 40px 7px 15px;
+  padding: 5px 5px 5px 5px;
   border-radius: 4px;
   -webkit-transition: all 0.3s linear;
   -moz-transition: all 0.3s linear;
