--- a/src/main/webapp/resources/assets/css/main.css
+++ b/src/main/webapp/resources/assets/css/main.css
@@ -36,7 +36,7 @@ html {
 body {
   font-size: 14px;
   font-weight: 400;
-  font-family: 'Lato', sans-serif;
+  font-family:'Noto Sans KR', 'Lato', sans-serif;
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
@@ -54,7 +54,7 @@ h1, h2, h3, h4 {
   font-weight: 700;
   line-height: 22px;
   margin: 0;
-  font-family: 'Poppins', sans-serif;
+  font-family: 'Noto Sans KR', 'Lato', sans-serif;
 }
 
 a {
@@ -76,7 +76,7 @@ a a:focus {
 p {
   color: #727272;
   font-weight: 400;
-  font-family: 'Lato', sans-serif;
+  font-family: 'Noto Sans KR', 'Lato', sans-serif;
   margin: 0px;
   font-size: 14px;
 }
