--- a/src/main/webapp/resources/assets/extras/layers.css
+++ b/src/main/webapp/resources/assets/extras/layers.css
@@ -985,7 +985,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(230,207,163,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:160px;
 	font-style:normal;
 	font-weight:300;
@@ -1004,7 +1004,7 @@ website:   	http://www.themepunch.com
 	border-width:0;
 	box-shadow:rgba(0,0,0,0.1) 0 1px 3px;
 	color:rgba(230,207,163,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:20px;
 	font-style:normal;
 	font-weight:400;
@@ -1022,7 +1022,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(0,0,0,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:20px;
 	font-style:normal;
 	font-weight:700;
@@ -1041,7 +1041,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(0,0,0,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:17px;
 	font-style:normal;
 	font-weight:300;
@@ -1059,7 +1059,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:80px;
 	font-style:normal;
 	font-weight:900;
@@ -1076,7 +1076,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:30px;
 	font-style:normal;
 	font-weight:100;
@@ -1094,7 +1094,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:17px;
 	font-style:normal;
 	font-weight:300;
@@ -1112,7 +1112,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:12px;
 	font-style:normal;
 	font-weight:600;
@@ -1130,7 +1130,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(0,0,0,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:60px;
 	font-style:normal;
 	font-weight:900;
@@ -1148,7 +1148,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(0,0,0,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:20px;
 	font-style:normal;
 	font-weight:400;
@@ -1166,7 +1166,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:130px;
 	font-style:normal;
 	font-weight:100;
@@ -1184,7 +1184,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:130px;
 	font-style:normal;
 	font-weight:900;
@@ -1201,7 +1201,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(0,0,0,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:32px;
 	font-style:normal;
 	font-weight:400;
@@ -1281,7 +1281,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:80px;
 	font-style:normal;
 	font-weight:100;
@@ -1299,7 +1299,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(119,119,119,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:20px;
 	font-style:normal;
 	font-weight:300;
@@ -1344,7 +1344,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:20px;
 	font-style:normal;
 	font-weight:300;
@@ -1373,7 +1373,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:17px;
 	font-style:normal;
 	font-weight:300;
@@ -1391,7 +1391,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,0.35);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:20px;
 	font-style:normal;
 	font-weight:300;
@@ -1437,7 +1437,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(51,51,51,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:90px;
 	font-style:normal;
 	font-weight:100;
@@ -1454,7 +1454,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(153,153,153,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:15px;
 	font-style:normal;
 	font-weight:400;
@@ -1471,7 +1471,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(153,153,153,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:16px;
 	font-style:normal;
 	font-weight:600;
@@ -1488,7 +1488,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:15px;
 	font-style:normal;
 	font-weight:500;
@@ -1518,7 +1518,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:90px;
 	font-style:normal;
 	font-weight:100;
@@ -1536,7 +1536,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,0.35);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:15px;
 	font-style:normal;
 	font-weight:400;
@@ -1554,7 +1554,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,0.65);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:16px;
 	font-style:normal;
 	font-weight:600;
@@ -1572,7 +1572,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:30px;
 	font-style:normal;
 	font-weight:900;
@@ -1602,7 +1602,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:70px;
 	font-style:normal;
 	font-weight:700;
@@ -1619,7 +1619,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:13px;
 	font-style:normal;
 	font-weight:500;
@@ -1638,7 +1638,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:1px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:14px;
 	font-style:normal;
 	font-weight:500;
@@ -1668,7 +1668,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:30px;
 	font-style:normal;
 	font-weight:400;
@@ -1687,7 +1687,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:1px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:14px;
 	font-style:normal;
 	font-weight:500;
@@ -1735,7 +1735,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:2px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:20px;
 	font-style:normal;
 	font-weight:300;
@@ -1849,7 +1849,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:1px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:14px;
 	font-style:normal;
 	font-weight:500;
@@ -1879,7 +1879,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:30px;
 	font-style:normal;
 	font-weight:900;
@@ -1897,7 +1897,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:12px;
 	font-style:normal;
 	font-weight:600;
@@ -1916,7 +1916,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:1px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:14px;
 	font-style:normal;
 	font-weight:500;
@@ -1946,7 +1946,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:1px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:14px;
 	font-style:normal;
 	font-weight:500;
@@ -1976,7 +1976,7 @@ website:   	http://www.themepunch.com
 	border-style:none;
 	border-width:2px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:16px;
 	font-style:normal;
 	font-weight:600;
@@ -2036,7 +2036,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:0;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:15px;
 	font-style:normal;
 	font-weight:600;
@@ -2066,7 +2066,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:2px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:15px;
 	font-style:normal;
 	font-weight:600;
@@ -2095,7 +2095,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:2px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:17px;
 	font-style:normal;
 	font-weight:600;
@@ -2125,7 +2125,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:2px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:17px;
 	font-style:normal;
 	font-weight:600;
@@ -2155,7 +2155,7 @@ website:   	http://www.themepunch.com
 	border-style:solid;
 	border-width:1px;
 	color:rgba(255,255,255,1.00);
-	font-family:'Poppins', sans-serif;;
+	font-family: 'Noto Sans KR', sans-serif;
 	font-size:15px;
 	font-style:normal;
 	font-weight:600;
@@ -2542,7 +2542,7 @@ website:   	http://www.themepunch.com
     line-height: 100px;
     font-weight: 800;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 10px 0px 10px 0;
     text-decoration: none;
     background-color: transparent;
@@ -2559,7 +2559,7 @@ website:   	http://www.themepunch.com
     line-height: 24px;
     font-weight: 500;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 0 0 0 0px;
     text-decoration: none;
     background-color: transparent;
@@ -2577,7 +2577,7 @@ website:   	http://www.themepunch.com
     line-height: 13px;
     font-weight: 500;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 15px 50px 15px 50px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0);
@@ -2605,7 +2605,7 @@ website:   	http://www.themepunch.com
     line-height: 28px;
     font-weight: 500;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 30px 30px 30px 30px;
     text-decoration: none;
     background-color: rgba(255, 255, 255, 1.00);
@@ -2622,7 +2622,7 @@ website:   	http://www.themepunch.com
     line-height: 13px;
     font-weight: 700;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 15px 70px 15px 50px;
     text-decoration: none;
     background-color: rgba(255, 255, 255, 1.00);
@@ -2650,7 +2650,7 @@ website:   	http://www.themepunch.com
     line-height: 20px;
     font-weight: 700;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 14px 14px 14px 16px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0);
@@ -2678,7 +2678,7 @@ website:   	http://www.themepunch.com
     line-height: 12px;
     font-weight: 600;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 5px 5px 5px 5px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0.35);
@@ -2696,7 +2696,7 @@ website:   	http://www.themepunch.com
     line-height: 30px;
     font-weight: 900;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 5px 5px 5px 5px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 1.00);
@@ -2777,7 +2777,7 @@ website:   	http://www.themepunch.com
     line-height: 70px;
     font-weight: 800;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 0px 0px 0px 0;
     text-decoration: none;
     background-color: transparent;
@@ -2794,7 +2794,7 @@ website:   	http://www.themepunch.com
     line-height: 20px;
     font-weight: 700;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 20px 50px 20px 50px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0);
@@ -2822,7 +2822,7 @@ website:   	http://www.themepunch.com
     line-height: 20px;
     font-weight: 400;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 0 0 0 0px;
     text-decoration: none;
     background-color: transparent;
@@ -2844,7 +2844,7 @@ website:   	http://www.themepunch.com
     line-height: 45px;
     font-weight: 600;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 0 0 0 0px;
     text-decoration: none;
     background-color: transparent;
@@ -2861,7 +2861,7 @@ website:   	http://www.themepunch.com
     line-height: 24px;
     font-weight: 600;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 0 0 0 0px;
     text-decoration: none;
     background-color: transparent;
@@ -2878,7 +2878,7 @@ website:   	http://www.themepunch.com
     line-height: 20px;
     font-weight: 400;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 10px 10px 10px 10px;
     text-decoration: none;
     background-color: transparent;
@@ -2905,7 +2905,7 @@ website:   	http://www.themepunch.com
     line-height: 70px;
     font-weight: 500;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 0 0 0 0px;
     text-decoration: none;
     background-color: transparent;
@@ -2922,7 +2922,7 @@ website:   	http://www.themepunch.com
     line-height: 25px;
     font-weight: 500;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 0 0 0 0px;
     text-decoration: none;
     background-color: transparent;
@@ -2939,7 +2939,7 @@ website:   	http://www.themepunch.com
     line-height: 28px;
     font-weight: 500;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 0 0 0 0px;
     text-decoration: none;
     background-color: transparent;
@@ -2956,7 +2956,7 @@ website:   	http://www.themepunch.com
     line-height: 13px;
     font-weight: 700;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 15px 50px 15px 50px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0);
@@ -2984,7 +2984,7 @@ website:   	http://www.themepunch.com
     line-height: 13px;
     font-weight: 700;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 14px 14px 14px 16px;
     text-decoration: none;
     background-color: rgba(0, 0, 0, 0);
@@ -3738,7 +3738,7 @@ website:   	http://www.themepunch.com
         line-height: 20px;
         font-weight: 400;
         font-style: normal;
-        font-family: 'Poppins', sans-serif;;
+        font-family: 'Noto Sans KR', sans-serif;
         padding: 11px 8px 11px 12px;
         text-decoration: none;
         text-align: left;
@@ -5030,7 +5030,7 @@ tp-caption.Team-Thumb,
     line-height: 40px;
     font-weight: 900;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 1px 30px 1px 30px;
     text-decoration: none;
     text-align: left;
@@ -5059,7 +5059,7 @@ tp-caption.Team-Thumb,
     line-height: 120px;
     font-weight: 900;
     font-style: normal;
-    font-family: 'Poppins', sans-serif;;
+    font-family: 'Noto Sans KR', sans-serif;
     padding: 0 0 0 0px;
     text-decoration: none;
     text-align: left;
